# DocumentRAG

./: README.md  main.py  pyproject.toml  starter_tutorial.py
backend/: .editorconfig  .gitignore  Dockerfile  README.Docker.md  compose.yaml  init.sql  main.py  pyproject.toml  requirements.txt  starter_tutorial.py  tests.ipynb
backend/app/: settings.py
backend/app/controllers/: document.py
backend/app/engine/chat_prompt/: chat_prompt.py  pydantic_prompt_models.py
backend/app/engine/indexers/: simple_index.py
backend/app/engine/loaders/: __init__.py  file_parser.py
backend/app/repository/: document_repository.py  insurance_repository.py  knowledge_base_repository.py
backend/app/utils/: regex.py
backend/database/: database.py  models.py  schemas.py
backend/enums/: insurance_types.py  order_by.py
backend/sql/: init.sql
data_starter_tutorial/: exemplo_hackhathon.txt
